results/SVCOMP/conversational/log-putfield_getfield1-2024_03_15_02_27_40.txt
class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

class A {
  public int i;
}
;

class putfield_getfield1 {
  //@ ensures \result <==> a.i == 999;
  public static boolean f() {
    A a = new A();
    a.i = 999;
    return 999 == a.i;
  }
}
/home/max/Documents/JMLGPT/tmp/putfield_getfield1.java:7: error: cannot find symbol
  //@ ensures \result <==> a.i == 999;
                           ^
  symbol:   variable a
  location: class putfield_getfield1
1 error

